--- a/css/Donor_Map.css
+++ b/css/Donor_Map.css
@@ -1,4 +1,4 @@
-﻿html {
+﻿html{
   background: #1a1a1a;
   color: #e5e5e5;
   text-align: center;
@@ -130,6 +130,21 @@ li.active a, a:hover, a:active {
     left:49.8%
 }
 
+#Blaisdell_Point {
+    top: 670%;
+    left: 71%;
+}
+
+#FitnessCenter_Point {
+    top: 320%;
+    left: 77.9%;
+}
+
+#Residence_Point {
+    top: 1100%;
+    left: 64.1%;
+}
+
 .distribution-map .map-point {
   cursor: pointer;
   outline: none;
@@ -150,42 +165,4 @@ li.active a, a:hover, a:active {
   transition: opacity 0.25s ease-in-out 0.25s, width 0.25s ease-in-out 0.25s, height 0.25s ease-in-out 0.25s, z-index 0.25s ease-in-out 0.25s;
   background: rgba(26, 26, 26, 0.85);
   border: 5px solid #7fcff7;
-}
-.distribution-map .map-point .content {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  opacity: 0;
-  -webkit-transition: opacity 0.25s ease-in-out;
-  transition: opacity 0.25s ease-in-out;
-  width: 100%;
-  height: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  overflow: overlay;
-}
-.distribution-map .map-point:active, .distribution-map .map-point:focus {
-  margin: 0;
-  padding: 0;
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
-  width: 300px;
-  height: 220px;
-  color: #e5e5e5;
-  z-index: 1;
-  -webkit-transition: opacity 0.25s ease-in-out, width 0.25s ease-in-out, height 0.25s ease-in-out;
-  transition: opacity 0.25s ease-in-out, width 0.25s ease-in-out, height 0.25s ease-in-out;
-}
-.distribution-map .map-point:active .content, .distribution-map .map-point:focus .content {
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
-  -moz-transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  -o-transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  -webkit-transition: opacity 0.25s ease-in-out, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  -webkit-transition-delay: 0.25s, 0s, 0s;
-  -webkit-transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  transition: opacity 0.25s ease-in-out 0.25s, height 0.25s ease-in-out, overflow 0.25s ease-in-out;
-  overflow: hidden;
-}
-.distribution-map .map-point:active .content a:hover, .distribution-map .map-point:active .content a:active, .distribution-map .map-point:focus .content a:hover, .distribution-map .map-point:focus .content a:active {
-  color: #afe1fa;
 }
