--- a/css/Alumni_Map.css
+++ b/css/Alumni_Map.css
@@ -9,10 +9,6 @@ body {
   width: 100%;
   height: 900px;
   margin: 10px auto;
-  padding: 0 100px;
-  background: url(../Images/Alumni_Assets/Alumni_Map.png) no-repeat center center fixed; 
-  -webkit-background-size:cover
-  -moz-background-size:cover
-  -o-background-size: cover;
-  background-size: 1600px;
+  padding: 0 50px !important;
+  background-size: 1500px !important;
 }
